Add multiple mail box support

--- a/TraderBot.EmailListener/appsettings.json
+++ b/TraderBot.EmailListener/appsettings.json
@@ -1,14 +1,16 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "TraderBot": "Debug"
     }
   },
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http2"
+      "Protocols": "Http1"
     }
   },
   "MailBox": {
