--- a/TraderBot.BinanceConnect/appsettings.json
+++ b/TraderBot.BinanceConnect/appsettings.json
@@ -1,9 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning",
-      "System.Net.Http.HttpClient.OpenSpotCommand.LogicalHandler": "Debug"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "TraderBot": "Debug"
     }
   },
   "AllowedHosts": "*",
