--- a/TraderBot.EmailListener/TraderBot.EmailListener.csproj
+++ b/TraderBot.EmailListener/TraderBot.EmailListener.csproj
@@ -1,24 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    </PropertyGroup>
+      <UserSecretsId>a2b9ff39-6ffa-4902-8fb1-60469a0c18f6</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
         <PackageReference Include="MailKitLite" Version="3.4.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\TraderBot.Abstractions\TraderBot.Abstractions.csproj" />
     </ItemGroup>
-
+    
     <ItemGroup>
         <Protobuf Include="..\Protos\types.proto" Link="Protos\types.proto" />
-        <Protobuf Include="..\Protos\email_listener.proto" Link="Protos\email_listener.proto" />
         <Protobuf Include="..\Protos\order_controller.proto" Link="Protos\order_controller.proto" GrpcServices="Client" />
     </ItemGroup>
 
