--- a/TraderBot.OrderController/appsettings.json
+++ b/TraderBot.OrderController/appsettings.json
@@ -1,8 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "TraderBot": "Debug"
     }
   },
   "AllowedHosts": "*",
@@ -35,7 +37,6 @@
   },
   "Follow": {
     "Allowed": [
-      
     ]
   }
 }
