Prepare to launch

--- a/TraderBot.Admin/appsettings.json
+++ b/TraderBot.Admin/appsettings.json
@@ -15,8 +15,6 @@
   },
   "RavenDb": {
     "DatabaseName": "traderbot",
-    "Urls": [
-      "http://127.0.0.1:8080"
-    ]
+    "Endpoint": "http://127.0.0.1:8080"
   }
 }
