--- a/TraderBot.BinanceConnect/appsettings.json
+++ b/TraderBot.BinanceConnect/appsettings.json
@@ -14,8 +14,10 @@
     }
   },
   "Binance": {
-    "UseTestnet": true,
-    "ApiKey": "",
-    "SecretKey": ""
+    "UseTestnet": false
+  },
+  "RavenDb": {
+    "DatabaseName": "traderbot",
+    "Endpoint": "http://127.0.0.1:8080"
   }
 }
