--- a/TraderBot.EmailListener/appsettings.json
+++ b/TraderBot.EmailListener/appsettings.json
@@ -20,6 +20,10 @@
     "Password": "",
     "GetFrom": "do-not-reply@post.traderwagon.com"
   },
+  "RavenDb": {
+    "DatabaseName": "traderbot",
+    "Endpoint": "http://127.0.0.1:8080"
+  },
   "Dependency": {
     "OrderControllerServiceEndpoint": "http://localhost:5111"
   }
