--- a/TraderBot.OrderController/appsettings.json
+++ b/TraderBot.OrderController/appsettings.json
@@ -23,9 +23,7 @@
   },
   "RavenDb": {
     "DatabaseName": "traderbot",
-    "Urls": [
-      "http://127.0.0.1:8080"
-    ]
+    "Endpoint": "http://127.0.0.1:8080"
   },
   "Trading": {
     "default": {
@@ -34,9 +32,5 @@
     "BTCUSDT": {
       "rate": 0.008
     }
-  },
-  "Follow": {
-    "Allowed": [
-    ]
   }
 }
