--- a/TraderBot.BinanceConnect/appsettings.json
+++ b/TraderBot.BinanceConnect/appsettings.json
@@ -10,11 +10,11 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http2"
+      "Protocols": "Http1AndHttp2"
     }
   },
   "Binance": {
-    "UseTestnet": false
+    "UseTestnet": true
   },
   "RavenDb": {
     "DatabaseName": "traderbot",
