--- a/TraderBot.OrderController/TraderBot.OrderController.csproj
+++ b/TraderBot.OrderController/TraderBot.OrderController.csproj
@@ -15,6 +15,9 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="RavenDB.Client" Version="5.4.5" />
+        <PackageReference Include="prometheus-net.AspNetCore" Version="7.0.0" />
+        <PackageReference Include="prometheus-net.AspNetCore.Grpc" Version="7.0.0" />
+        <PackageReference Include="prometheus-net.AspNetCore.HealthChecks" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
