--- a/TraderBot.Admin/TraderBot.Admin.csproj
+++ b/TraderBot.Admin/TraderBot.Admin.csproj
@@ -10,6 +10,9 @@
     <ItemGroup>
         <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
         <PackageReference Include="Grpc.AspNetCore.Web" Version="2.49.0" />
+        <PackageReference Include="prometheus-net.AspNetCore" Version="7.0.0" />
+        <PackageReference Include="prometheus-net.AspNetCore.Grpc" Version="7.0.0" />
+        <PackageReference Include="prometheus-net.AspNetCore.HealthChecks" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
