--- a/TraderBot.EmailListener/TraderBot.EmailListener.csproj
+++ b/TraderBot.EmailListener/TraderBot.EmailListener.csproj
@@ -11,7 +11,9 @@
     <ItemGroup>
         <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
         <PackageReference Include="MailKitLite" Version="3.4.2" />
-
+        <PackageReference Include="prometheus-net.AspNetCore" Version="7.0.0" />
+        <PackageReference Include="prometheus-net.AspNetCore.Grpc" Version="7.0.0" />
+        <PackageReference Include="prometheus-net.AspNetCore.HealthChecks" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
