--- a/TraderBot.RavenDb/TraderBot.RavenDb.csproj
+++ b/TraderBot.RavenDb/TraderBot.RavenDb.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
         <PackageReference Include="Polly" Version="7.2.3" />
         <PackageReference Include="RavenDB.Client" Version="5.4.5" />
