--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,3 +54,26 @@ services:
       context: ./trader-bot-view
     ports:
       - "0.0.0.0:5173:80"
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: unless-stopped
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+#      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-lifecycle'
+    ports:
+      - "0.0.0.0:9090:9090"
+  grafana:
+    image: grafana/grafana:7.5.7
+    ports:
+      - "0.0.0.0:3000:3000"
+    restart: unless-stopped
+#    volumes:
+#      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+#      - grafana-data:/var/lib/grafana
