--- a/trader-bot-view/package.json
+++ b/trader-bot-view/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@protobuf-ts/grpcweb-transport": "^2.8.2",
     "@protobuf-ts/plugin": "^2.8.2",
+    "axios": "^1.2.1",
     "google-protobuf": "~3.14.0",
     "grpc-web": "~1.4.2",
     "svelte-markdown": "^0.2.3"
